# BBA_ueb_fh

./: .gitignore  README.md
aufg0/: .depend  CMakeLists.txt  argparse.cpp  argparse.hpp  main.cpp  ueb00.cpp  ueb00.hpp  util.cpp  util.hpp
aufg0/tests/: test.sh
aufg1/: .depend  CMakeLists.txt
aufg1/src/: argparse.cpp  argparse.hpp  main.cpp  ueb01.cpp  ueb01.hpp  util.cpp  util.hpp
aufg1/tests/: bbacheck.py  bbacheck_aufruf.txt  test.sh  test01.json
aufg1/tests/expected/: hist_100.txt  hist_1000.txt  normalized.pgm  only0.pgm  only124.pgm  only17.pgm  only3.pgm  superSimpleBrightness_-0.5.pgm  superSimpleBrightness_0.5.pgm  superSimpleBrightness_10.0.pgm  superSimpleContrast_0.5.pgm  superSimpleContrast_2.0.pgm  superSimpleFactor_0.25.pgm  superSimpleGamma_0.5.pgm  superSimpleGamma_2.0.pgm  superSimpleHistogram_256.txt  superSimpleHistogram_4.txt  superSimpleLinear_-1.0_1.0.pgm  superSimpleLinear_1.0_0.125.pgm  superSimpleSumHistogram_256.txt
aufg1/tests/input/: bigGrey.pgm  bigGrey_copy.pgm  hist100.pgm  hist1000.pgm  notNormalizeable.pgm  notNormalized.pgm  only10.pgm  only7.pgm  second.pgm  simple.pgm  superSimple.pgm  superSimpleHistogram.pgm
aufg2/: .depend  CMakeLists.txt
aufg2/src/: argparse.cpp  argparse.hpp  main.cpp  ueb01.cpp  ueb02.hpp  util.cpp  util.hpp
aufg2/tests/: test.sh
aufg2/tests/expected/: median_3x3_dilate.pgm  median_3x3_erode.pgm  median_3x3_median.pgm  only0_2x2.pgm  only10_2x2.pgm  simple_1x1_reflect_11_5x5_0,25.pgm  simple_2x2_reflect_101_3x3_10.pgm  simple_2x2_reflect_11_5x5_0,25.pgm  simple_2x2_replicate_box.pgm  simple_3x3_kommutativ_und_assoziativ.pgm  simple_3x3_null_box.pgm  simple_3x3_reflect_11_box.pgm  simple_3x3_reflect_null_box.pgm  simple_3x3_replicate_box.pgm  values_3x1.pgm  values_5x5.pgm
aufg2/tests/input/: median_3x3.pgm  only0,25_5x5.pgm  only10_3x3.pgm  only255_5x5.pgm  simple_1x1.pgm  simple_2x2_box.pgm
aufg3/: .depend
aufg3/src/: argparse.cpp  argparse.hpp  main.cpp  ueb01.hpp  ueb02.cpp  ueb03.hpp  util.cpp
aufg3/tests/: test.sh
aufg3/tests/expected/: interpolation.pgm  simple_3x3.pgm  simple_3x3_scale22_nearest.pgm  simple_3x5_rotate_-90.pgm  simple_3x5_rotate_180.pgm  simple_3x5_rotate_45.pgm  simple_3x5_translate_0_1.pgm  simple_3x5_translate_1_0.pgm  simple_3x5_translate_1_1.pgm
aufg4/: CMakeCache.txt  CMakeLists.txt  Makefile  bba  cmake_install.cmake
aufg4/src/: argparse.cpp  argparse.hpp  main.cpp  ueb01.cpp  ueb02.cpp  ueb03.cpp  ueb04.cpp  ueb04.hpp  util.cpp  util.hpp
(+6 files in other folders)
